--- a/project/CV/index.html
+++ b/project/CV/index.html
@@ -124,7 +124,7 @@
       <div class="right">
         <div class="header">
             <div class="name_role">
-                <div class="name">Phurin Chaiprasan</div>
+                <div class="name">อันนี้ทำส่งตอนเรียน gifted</div>
             <div class="role">Full Stack Developer</div></div>
             <div class="about">
               I'm a Full Stack Developer who can do a little bit of marketing. I'm a coffeeholic and sleep.
